<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/agenda"
        android:title="@string/agenda"
        android:icon="@drawable/baseline_contacts_24"/>

    <item android:id="@+id/calendar"
        android:title="@string/calendar"
        android:icon="@drawable/baseline_calendar_month_24"/>

    <item android:id="@+id/calculator"
        android:title="@string/calculator"
        android:icon="@drawable/baseline_calculate_24"/>


    <item android:id="@+id/convertor"
        android:title="@string/convertor"
        android:icon="@drawable/baseline_currency_exchange_24"/>

    <item android:id="@+id/alarma"
        android:title="@string/alarma"
        android:icon="@drawable/baseline_access_alarm_24"/>
</menu>