<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AgendaFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/addContactButton"
        android:text="@string/salveaza_contact"/>

    <TextView
        android:id="@+id/adresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/adresa"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/choseImage"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/choseImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adresa"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/nume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/nume"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addressEditText"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/addressEditText"
        app:layout_constraintStart_toEndOf="@+id/nume"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/addContactButton"
        android:text="@string/alege_o_imagine"
        android:id="@+id/choseImage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        android:text="@string/sterge_contact"/>




</androidx.constraintlayout.widget.ConstraintLayout>
